# thermal_hexacopter_project

./: .gitignore  CHEATSHEET.md  COMPLETION_CERTIFICATE.md  Dockerfile  INDRA_EYE_MANUAL.md  QUICK_LAUNCH.md  README.md  REPOSITORY_SEAL.md  fix_audit_and_launch.sh  fly.py  launch_multi_terminal.sh  launch_tmux.sh  requirements.txt
config/: dds_bridge.yaml  hardware_map.yaml  livox_config.json  px4_params_indra_eye.txt  qgc_custom_layout.json
docker/: README.md
docs/: DEFENSE_PRESENTATION.md  EXECUTIVE_SUMMARY.md  FINAL_COMPLETION_REPORT.md  GIT_LOG_GUIDE.md  GLOBAL_HANDOVER_COMPLETE.md  GRAND_TECHNICAL_SUMMARY.md  MISSION_COMMAND_CHEATSHEET.md  PHD_MASTER_GUIDE.md  audit_results.md  cheatsheet.md  debugging_checkpoints.md  learning_log.md  lit_review.md  manual.md  manual_zero_to_hero.md  presentation_outline.txt  presentation_plan.md  roadmap.md
field_trials/: README.md
hardware/: BOM.md
ros2_ws/src/agri_bot_missions/: package.xml  setup.py
ros2_ws/src/agri_bot_missions/agri_bot_missions/: level1_hover.py  level2_box.py  level3_survey.py
ros2_ws/src/agri_hexacopter/: package.xml  setup.cfg  setup.py
ros2_ws/src/agri_hexacopter/agri_hexacopter/: mission_control.py  real_takeoff.py  test_connection.py  thermal_monitor.py
ros2_ws/src/agri_hexacopter/agri_hexacopter/flight_levels/: level1_basic_takeoff.py  level2_survey_grid.py
ros2_ws/src/agri_hexacopter/config/: mission_params.yaml
ros2_ws/src/agri_hexacopter/launch/: start_offboard.launch.py
ros2_ws/src/agri_hexacopter/worlds/: bihar_maize.sdf
ros2_ws/src/indra_eye_core/: CMakeLists.txt  package.xml
ros2_ws/src/indra_eye_core/include/indra_eye_core/: ekf_math.hpp
ros2_ws/src/indra_eye_core/src/: es_ekf_node.cpp  mavros_bridge_node.cpp  path_aggregator_node.cpp
ros2_ws/src/indra_eye_sim/: CMakeLists.txt  package.xml
ros2_ws/src/indra_eye_sim/launch/: hitl_launch.py  sitl_launch.py
ros2_ws/src/indra_eye_sim/rviz/: indra_eye_mission.rviz
ros2_ws/src/indra_eye_sim/worlds/: himalayan_terrain.world
ros2_ws/src/indra_eye_supervisor/: CMakeLists.txt  package.xml
ros2_ws/src/indra_eye_supervisor/src/: supervisor_node.cpp
scripts/: audit_master.py  auto_fly.sh  bihar_mission.sh  boot_hexacopter.sh  communication_audit.sh  diagnostic_audit.sh  environment_audit.sh  final_check.sh  maiden_voyage_bihar.sh  master_fly.py  master_launch.sh  run_docker.sh  run_maiden_voyage.sh  stress_test.sh  test_hover.sh  verify_level2.sh  visual_hexacopter.sh  visual_hexacopter_bihar.sh  visual_hover.sh
simulation/models/agri_hexacopter_drone/: level1_basic_takeoff.py  model.config  model.sdf
thesis/: README.md
